# ladcast

./: .gitignore  .pyproject_ray.toml  LICENSE  README.md  launch.sh  pyproject.toml  requirements.txt  routeB_symdiff_fix_instructions.md  verify_latent_symmetry.py  your_config.yaml
SymDiff/: .gitignore  LICENSE  README.md  analyse_geom.py  build_geom_dataset.py  eval_analyze.py  eval_conditional_qm9.py  eval_sample.py  main_geom_drugs.py  main_qm9.py  requirements.txt  setup.py  train_test.py  utils.py
ladcast/: train_AR.py  train_encdec.py  train_new_encdec.py  utils.py
scripts/: run_routeB_step1_train.sh  run_routeB_step2_compare.sh  run_routeB_step3_detailed_eval.sh
static/: ERA5_routeB_normal_1979_2017.json
tmp/: latent_equivariance_report.json  routeB_full_compare.json  routeB_minimal_compare.json  routeB_minimal_compare_v2.json  routeB_symdiff_detailed_eval.json
tools/: build_routeB_xarray_zarr.py  check_routeB_latent.py  compare_routeB_ar_models.py  compare_routeB_minimal_baselines.py  compute_routeB_latent_norm.py  compute_routeB_norm.py  diagnose_dataloader.py  diagnose_training.py  encode_routeB_latent.py  encode_routeB_latent_large.py  eval_routeB_ae_reconstruction.py  eval_routeB_symdiff_detailed.py  monitor_training.py  run_routeB_ar_pipeline.sh  test_dataloader_minimal.py  test_routeB_dataset.py  test_routeB_fourier_shift_smoke.py  test_routeB_latent_dataset.py  test_routeB_symdiff_smoke.py  test_routeB_symm_resnet_smoke.py  test_terrain_encoder_smoke.py  train_routeB_ae_smoke.py  train_routeB_ar.py  train_routeB_ar_smoke.py  (+4 more)
(+67 files in other folders)
